--- a/sevice2.yaml
+++ b/sevice2.yaml
@@ -6,8 +6,9 @@ metadata:
 spec:
   selector:
     app: nginx
+  type: NodePort
   ports:
-    - name: nginx-http
-      protocol: TCP
+    - name: nginx
       port: 80
+      nodePort: 30003
       targetPort: 80
